layaout de las otras actividades

--- a/app/src/main/res/layout/activity_hoteles.xml
+++ b/app/src/main/res/layout/activity_hoteles.xml
@@ -16,7 +16,7 @@
             />
         <ListView
             style="@style/listas"
-            android:id="@+id/MainMenu"/>
+            android:id="@+id/ListHoteles"/>
     </LinearLayout>
 
 </RelativeLayout>
