--- a/app/src/main/res/layout/activity_hoteles.xml
+++ b/app/src/main/res/layout/activity_hoteles.xml
@@ -11,7 +11,7 @@
         android:layout_height="wrap_content"
         android:orientation="vertical">
         <TextView
-            android:text="Hotels"
+            android:text="@string/title_activity_hoteles"
             style="@style/titulo"
             />
         <ListView
