--- a/app/src/main/res/layout/activity_others_sites.xml
+++ b/app/src/main/res/layout/activity_others_sites.xml
@@ -6,7 +6,17 @@
     android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context="com.example.alejolaya.practica4.OthersSites">
 
-    <TextView android:text="@string/hello_world" android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
+        <TextView
+            android:text="@string/title_activity_others_sites"
+            style="@style/titulo"
+            />
+        <ListView
+            style="@style/listas"
+            android:id="@+id/ListOthers"/>
+    </LinearLayout>
 
 </RelativeLayout>
