--- a/app/src/main/res/layout/layaout_hoteles.xml
+++ b/app/src/main/res/layout/layaout_hoteles.xml
@@ -9,7 +9,7 @@
     <ImageView
         android:layout_width="50dp"
         android:layout_height="50dp"
-        android:id="@+id/imagen"
+        android:id="@+id/imagenHotel"
         android:layout_weight="1"
         android:layout_gravity="center"
         android:src="@drawable/prueba"
@@ -23,14 +23,14 @@
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:id="@+id/tvMenuItem"
+            android:id="@+id/tvMenuItemHotel"
             android:text="asdf"
             android:textColor="@color/black"
             android:textSize="20dp"/>
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:id="@+id/tvSubItem"
+            android:id="@+id/tvSubItemHotel"
             android:text="subASDF"
             android:textColor="@color/black"
             android:textSize="10dp"/>
