--- a/app/src/main/res/layout/layaout_bars.xml
+++ b/app/src/main/res/layout/layaout_bars.xml
@@ -2,7 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="horizontal"
     android:layout_width="match_parent"
-    android:layout_height="60dp"
+    android:layout_height="wrap_content"
     android:layout_margin="30dp"
     android:background="@color/white">
 
